# Polar-Diagrams-for-Model-Comparison

./: .gitignore  CITATION.cff  README.md  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-package.yml  python-publish.yml
Data/: .CMIP3_wget-20221003091856.sh.status  CMIP3_wget-20221003091856.sh
Data/Dataset_0/: Anscombes_Quartet.csv
Data/Dataset_1/: .Dataset_1_wget-20221011042255.sh.status  Dataset_1_filters_CMIP3.json  Dataset_1_wget-20221011042255.sh  generate_dataset_1.sh
Data/Dataset_2/: Classification_results_main_table.csv
Data/Dataset_2/Mushroom/SecondaryData/: secondary_data_meta.txt  secondary_data_no_miss.csv  secondary_data_shuffled.csv
Data/Dataset_2/Splitted_files/: Classification_results_Breast_table.csv  Classification_results_Ecoli_table.csv  Classification_results_Glass_table.csv  Classification_results_Iris_table.csv  Classification_results_Lung_table.csv
Documentation/: polar_diagrams.html  search.js
Source/: diagrams.py  main.ipynb  main.py  polar_diagrams.py  test.py
Source/polar_diagrams/: README.md  __init__.py  pyproject.toml  setup.cfg
Source/polar_diagrams/docs/: index.html  polar_diagrams.html  polar_diagrams.md  search.js
Source/polar_diagrams/docs/polar_diagrams/: polar_diagrams.html
Source/polar_diagrams/src/: __init__.py
Source/polar_diagrams/src/polar_diagrams/: __init__.py  polar_diagrams.py
Source/polar_diagrams/tests/: test.py
