[metadata]

name = polar_diagrams
version = 1.0.0
author = Aleksandar Anžel
author_email = aleksandar.anzel@uni-marburg.de
description = Interactive Polar Diagrams for Model Comparison
long_description = file: README.md LICENCE
long_description_content_type = text/markdown
url = https://github.com/AAnzel/Polar-Diagrams-for-Model-Comparison
Bug Tracker = https://github.com/AAnzel/Polar-Diagrams-for-Model-Comparison/issues
classifiers =
Programming Language :: Python :: 3
Natural Language :: English
License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
Operating System :: OS Independent
Intended Audience :: Science/Research
Topic :: Scientific/Engineering :: Visualization

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
   numpy
   pandas
   plotly
   scikit_learn
   scipy
   kaleido

[options.packages.find]
where=src
exclude =
    docs*
