[metadata]

name = polar_diagrams
version = 1.0.0
author = Aleksandar Anžel
author_email = aleksandar.anzel@uni-marburg.de
description = Interactive Polar Diagrams for Model Comparison
long_description = file: README.md, LICENCE
long_description_content_type = text/markdown
Source = https://github.com/AAnzel/Polar-Diagrams-for-Model-Comparison
Tracker = https://github.com/AAnzel/Polar-Diagrams-for-Model-Comparison/issues
Documentation = 
classifiers =
    Programming Language :: Python :: 3
    Natural Language :: English
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Education
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
install_requires =
    numpy
    pandas
    plotly
    scikit_learn
    scipy
    kaleido

[options.packages.find]
where=src

[options.package_data]
mypkg =
    *.html